[sc-8306] Add AI tokens used metric in the usage board

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -566,6 +566,7 @@
 	"language.ru": "Ruso",
 	"language.sv": "Sueco",
 	"language.tr": "Turco",
+	"metrics.ai-tokens-used.title": "Tokens utilizados",
 	"metrics.answers.title": "Respuestas generativas",
 	"metrics.period.last-12-months": "Últimos 12 meses",
 	"metrics.period.last-30-days": "Últimos 30 días",
@@ -573,6 +574,7 @@
 	"metrics.search.title": "Consultas de búsqueda",
 	"metrics.units.hours": "Horas",
 	"metrics.units.queries": "Consultas",
+	"metrics.units.tokens": "Tokens",
 	"modal.create_link.csv-file": "Enlaces desde un archivo CSV",
 	"modal.create_link.link-to.file": "un archivo en línea",
 	"modal.create_link.link-to.label": "Enlace a:",
