--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -567,6 +567,7 @@
 	"language.ru": "Russe",
 	"language.sv": "Suédois",
 	"language.tr": "Turc",
+	"metrics.ai-tokens-used.title": "Tokens utilisés",
 	"metrics.answers.title": "Réponses génératives",
 	"metrics.period.last-12-months": "12 derniers mois",
 	"metrics.period.last-30-days": "30 derniers jours",
@@ -574,6 +575,7 @@
 	"metrics.search.title": "Requêtes de recherche",
 	"metrics.units.hours": "Heures",
 	"metrics.units.queries": "Requêtes",
+	"metrics.units.tokens": "Tokens",
 	"modal.create_link.csv-file": "Liens à partir d'un fichier CSV",
 	"modal.create_link.link-to.file": "un fichier en ligne",
 	"modal.create_link.link-to.label": "Lien vers:",
