--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -566,6 +566,7 @@
 	"language.ru": "Rus",
 	"language.sv": "Suec",
 	"language.tr": "Turc",
+	"metrics.ai-tokens-used.title": "Tokens utilitzats",
 	"metrics.answers.title": "Respostes generatives",
 	"metrics.period.last-12-months": "Últims 12 mesos",
 	"metrics.period.last-30-days": "Últims 30 dies",
@@ -573,6 +574,7 @@
 	"metrics.search.title": "Consultes de cerca",
 	"metrics.units.hours": "Hores",
 	"metrics.units.queries": "Consultes",
+	"metrics.units.tokens": "Tokens",
 	"modal.create_link.csv-file": "Enllaços d'un fitxer CSV",
 	"modal.create_link.link-to.file": "un fitxer en línia",
 	"modal.create_link.link-to.label": "Enllaç a:",
