--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -567,6 +567,7 @@
 	"language.ru": "Russian",
 	"language.sv": "Swedish",
 	"language.tr": "Turkish",
+	"metrics.ai-tokens-used.title": "Tokens used",
 	"metrics.answers.title": "Generative answers",
 	"metrics.period.last-12-months": "Last 12 months",
 	"metrics.period.last-30-days": "Last 30 days",
@@ -574,6 +575,7 @@
 	"metrics.search.title": "Search queries",
 	"metrics.units.hours": "Hours",
 	"metrics.units.queries": "Queries",
+	"metrics.units.tokens": "Tokens",
 	"modal.create_link.csv-file": "Links from a CSV file",
 	"modal.create_link.link-to.file": "an online file",
 	"modal.create_link.link-to.label": "Link to:",
