[sc-8765] Update Notification panel (#1304)
* [sc-8765] Update Notification panel

- Use the new `listenToResourceOperationNotifications` method to get better notifications
- Stop listening to current KB notifications when switching to another KB, and remove the previous notifications from the panel
- Fix the error management in rest’s `getStreamMessages` method: firefox is raising `NS_BINDING_ABORTED` TypeError when reloading the page while the connection is opened, so our system allowing to reconnect once in case of network error was reconnecting while it shouldn't have on this specific case.

* Fix unit tests

* Fix notification stream when moving away from the BaseComponent

  - Prevent the notification stream to be lost when moving away from the base component and then coming back
  - prevent the observer to complete with an error when calling `stopListeningToNotifications`
  - better error message when fetch is raising an error

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -622,8 +622,12 @@
 	"notification.panel.more": "y {{count}} más ...",
 	"notification.panel.no-notifications": "Nada nuevo pendiente",
 	"notification.panel.title": "Notificaciones",
-	"notification.type.processing-completed": "Procesamiento completado",
-	"notification.type.processing-failed": "Procesamiento fallido",
+	"notification.type.creation-completed": "Creación de recurso completada",
+	"notification.type.creation-failed": "Creación de recurso fallada",
+	"notification.type.deletion-completed": "Eliminación de recursos completada",
+	"notification.type.deletion-failed": "Eliminación de recursos fallada",
+	"notification.type.modification-completed": "Edición de recursos completada",
+	"notification.type.modification-failed": "Edición de recursos fallada",
 	"pastanaga.calendar.invalid-format": "Formato de fecha no válido (formato esperado: \"MMM dd, YYYY\")",
 	"pastanaga.calendar.months": "Meses",
 	"pastanaga.calendar.years": "Años",
