--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -904,7 +904,7 @@
 	"stash.upload.option.links": "Enlaces",
 	"stash.upload.option.q-and-a": "Preguntas y respuestas",
 	"stash.upload.page-subtitle": "Puede cargar directamente sus archivos, enlaces, recursos o carpetas",
-	"stash.upload.sync.description": "Seleccione una fuente y elija las carpetas que desea enviar automáticamente a su Cuadro de conocimiento actual.",
+	"stash.upload.sync.description": "Seleccione una fuente y elija las carpetas que desea enviar automáticamente a su Knowledge Box actual.",
 	"stash.upload.sync.setup": "O configure un Agente de sincronización para usar la función de sincronización y enviar datos automáticamente desde:",
 	"stash.upload.sync.setup-button": "Configurar agente de sincronización",
 	"stash.upload.sync.title": "Sincronización",
