--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -905,7 +905,7 @@
 	"stash.upload.option.links": "Liens",
 	"stash.upload.option.q-and-a": "Q&R",
 	"stash.upload.page-subtitle": "Vous pouvez directement télécharger vos fichiers, liens, ressources ou dossiers",
-	"stash.upload.sync.description": "Sélectionnez une source et choisissez les dossiers que vous souhaitez transférer automatiquement vers votre boîte de connaissances actuelle.",
+	"stash.upload.sync.description": "Sélectionnez une source et choisissez les dossiers que vous souhaitez transférer automatiquement vers votre Knowledge Box actuelle.",
 	"stash.upload.sync.setup": "Vous pouvez également configurer un agent de synchronisation pour utiliser la fonctionnalité de synchronisation et transférer automatiquement les données depuis :",
 	"stash.upload.sync.setup-button": "Configurer l'agent de synchronisation",
 	"stash.upload.sync.title": "Synchronisation",
