[sc-8822] Prompt lab

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -649,6 +649,26 @@
 	"profile.password_changed": "S'ha modificat la contrasenya",
 	"profile.repeat_password": "Repeteix la contrasenya",
 	"profile.select_language": "Selecciona l’idioma preferent",
+	"prompt-lab.configuration.generate-button": "Generar",
+	"prompt-lab.configuration.models.title": "Seleccioneu tots els models que voleu comparar",
+	"prompt-lab.configuration.prompts.label": "Prompt",
+	"prompt-lab.configuration.prompts.placeholder": "Introduïu la vostra sol·licitud amb la paraula {question} entre claudàtors on voleu que es col·loqui la consulta",
+	"prompt-lab.configuration.prompts.title": "Definiu les indicacions que influiran en la manera com es comporta el sistema quan feu una pregunta (opcional)",
+	"prompt-lab.configuration.question.help": "Afegiu la vostra pregunta prement Retorn o el botó \"+\"",
+	"prompt-lab.configuration.question.label": "Pregunta",
+	"prompt-lab.configuration.question.placeholder": "Escriu la teva pregunta aquí",
+	"prompt-lab.configuration.question.title": "Escriu fins a tres preguntes amb les quals vulguis provar",
+	"prompt-lab.configuration.title": "Configuració",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Tingueu en compte que durant la prova, els usuaris que podrien estar utilitzant el vostre Knowledge Box podrien experimentar respostes inconsistents.\n<br><br>Si us plau, feu la prova durant el desenvolupament o quan estigueu segur que cap usuari es veurà afectat per aquests canvis.",
+	"prompt-lab.generate.confirmation.title": "Abans de continuar...",
+	"prompt-lab.generate.loading.description": "Estem generant els teus resultats. Si us plau, no abandonis la pàgina.",
+	"prompt-lab.generate.loading.title": "Només un moment…",
+	"prompt-lab.page-description": "Proveu els LLM i les indicacions, mireu com funcionen junts, trieu quina configuració voleu aplicar al vostre Knowledge Box.",
+	"prompt-lab.page-title": "Prompt lab",
+	"prompt-lab.results.download-csv": "Descarregar CSV",
+	"prompt-lab.results.prompt": "Prompt:",
+	"prompt-lab.results.question": "Pregunta: {{query}}",
+	"prompt-lab.results.title": "Resultats",
 	"quickstart.become_master": "Fes-te un expert!",
 	"quickstart.complete_steps": "Completeu els passos següents per aprofitar al màxim les funcions de Nuclia!",
 	"quickstart.completed_tasks": "Tasques completades",
@@ -819,6 +839,7 @@
 	"sidenav.list": "Llistat recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Claus NUA",
+	"sidenav.prompt-lab": "Prompt lab",
 	"sidenav.settings": "Preferències",
 	"sidenav.subscription": "Subscripció",
 	"sidenav.sync": "Sincronitzar",
