--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -650,6 +650,26 @@
 	"profile.password_changed": "Password changed",
 	"profile.repeat_password": "Repeat your password",
 	"profile.select_language": "Select language",
+	"prompt-lab.configuration.generate-button": "Generate",
+	"prompt-lab.configuration.models.title": "Select all the models you want to compare",
+	"prompt-lab.configuration.prompts.label": "Prompt",
+	"prompt-lab.configuration.prompts.placeholder": "Input your prompt with the word {question} in brackets where you want the query to be placed",
+	"prompt-lab.configuration.prompts.title": "Define the prompts that will influence the way the system behaves when you ask a question (optional)",
+	"prompt-lab.configuration.question.help": "Add your question by pressing Enter or the '+' button",
+	"prompt-lab.configuration.question.label": "Question",
+	"prompt-lab.configuration.question.placeholder": "Write your question here",
+	"prompt-lab.configuration.question.title": "Write up to three questions you want to test with",
+	"prompt-lab.configuration.title": "Configuration",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Please be aware that during the testing, users that might be using your Knowledge Box could experience inconsistent answers.\n<br><br>\nPlease do the testing while in development or when you’re sure no user will be affected by these changes.",
+	"prompt-lab.generate.confirmation.title": "Before you continue…",
+	"prompt-lab.generate.loading.description": "We’re generating your results. Please do not leave the page.",
+	"prompt-lab.generate.loading.title": "Just a moment…",
+	"prompt-lab.page-description": "Test LLMs and prompts, see how they work together, choose which settings you want to apply to your Knowledge Box.",
+	"prompt-lab.page-title": "Prompt lab",
+	"prompt-lab.results.download-csv": "Download CSV",
+	"prompt-lab.results.prompt": "Prompt: ",
+	"prompt-lab.results.question": "Question: {{query}}",
+	"prompt-lab.results.title": "Results",
 	"quickstart.become_master": "Become an expert!",
 	"quickstart.complete_steps": "Complete the steps below to take full advantage of Nuclia’s features!",
 	"quickstart.completed_tasks": "Completed tasks",
@@ -820,6 +840,7 @@
 	"sidenav.list": "Resources list",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "NUA keys",
+	"sidenav.prompt-lab": "Prompt lab",
 	"sidenav.settings": "Settings",
 	"sidenav.subscription": "Subscription",
 	"sidenav.sync": "Synchronize",
