--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -650,6 +650,26 @@
 	"profile.password_changed": "Mot de passe changé",
 	"profile.repeat_password": "Répétez votre mot de passe",
 	"profile.select_language": "Choisir la langue",
+	"prompt-lab.configuration.generate-button": "Générer",
+	"prompt-lab.configuration.models.title": "Sélectionnez tous les modèles que vous souhaitez comparer",
+	"prompt-lab.configuration.prompts.label": "Prompt",
+	"prompt-lab.configuration.prompts.placeholder": "Saisissez votre prompt avec le mot {question} entre accolades à l'endroit où vous souhaitez que la requête soit placée.",
+	"prompt-lab.configuration.prompts.title": "Définir les prompts qui influenceront le comportement du système lorsque vous posez une question (facultatif)",
+	"prompt-lab.configuration.question.help": "Ajoutez votre question en appuyant sur Entrée ou sur le bouton '+'",
+	"prompt-lab.configuration.question.label": "Question",
+	"prompt-lab.configuration.question.placeholder": "Écrivez votre question ici",
+	"prompt-lab.configuration.question.title": "Écrivez jusqu'à trois questions avec lesquelles vous souhaitez tester",
+	"prompt-lab.configuration.title": "Configuration",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Veuillez noter que lors des tests, les utilisateurs susceptibles d'utiliser votre Knowledge Box pourraient rencontrer des réponses incohérentes.\n<br><br>Veuillez effectuer les tests pendant le développement ou lorsque vous êtes sûr qu'aucun utilisateur ne sera affecté par ces modifications.",
+	"prompt-lab.generate.confirmation.title": "Avant de continuer…",
+	"prompt-lab.generate.loading.description": "Nous générons vos résultats. Merci de ne pas quitter la page.",
+	"prompt-lab.generate.loading.title": "Juste un moment...",
+	"prompt-lab.page-description": "Testez les LLM et les invites, voyez comment ils fonctionnent ensemble, choisissez les paramètres que vous souhaitez appliquer à votre Knowledge Box.",
+	"prompt-lab.page-title": "Prompt lab",
+	"prompt-lab.results.download-csv": "Télécharger CSV",
+	"prompt-lab.results.prompt": "Prompt : ",
+	"prompt-lab.results.question": "Question : {{query}}",
+	"prompt-lab.results.title": "Résultats",
 	"quickstart.become_master": "Devenez un expert !",
 	"quickstart.complete_steps": "Suivez les étapes ci-dessous pour profiter pleinement des fonctionnalités de Nuclia !",
 	"quickstart.completed_tasks": "Tâches terminées",
@@ -820,6 +840,7 @@
 	"sidenav.list": "Liste des ressources",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Clés NUA",
+	"sidenav.prompt-lab": "Prompt lab",
 	"sidenav.settings": "Réglages",
 	"sidenav.subscription": "Abonnement",
 	"sidenav.sync": "Synchroniser",
