--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -649,6 +649,26 @@
 	"profile.password_changed": "El password has dido cambiado",
 	"profile.repeat_password": "Reptie la contraseña",
 	"profile.select_language": "Selecciona idioma",
+	"prompt-lab.configuration.generate-button": "Generar",
+	"prompt-lab.configuration.models.title": "Selecciona todos los modelos que quieras comparar",
+	"prompt-lab.configuration.prompts.label": "Prompt",
+	"prompt-lab.configuration.prompts.placeholder": "Ingrese su mensaje con la palabra {question} entre corchetes donde desea que se coloque la consulta",
+	"prompt-lab.configuration.prompts.title": "Defina las indicaciones que influirán en la forma en que se comporta el sistema cuando haga una pregunta (opcional)",
+	"prompt-lab.configuration.question.help": "Agregue su pregunta presionando Enter o el botón '+'",
+	"prompt-lab.configuration.question.label": "Pregunta",
+	"prompt-lab.configuration.question.placeholder": "Escribe tu pregunta aquí",
+	"prompt-lab.configuration.question.title": "Escribe hasta tres preguntas con las que quieras probar",
+	"prompt-lab.configuration.title": "Configuración",
+	"prompt-lab.generate.confirmation.inconsistency-warning": "Tenga en cuenta que durante la prueba, los usuarios que puedan estar utilizando su Knowledge Box podrían experimentar respuestas inconsistentes.\n<br><br>Realice las pruebas mientras esté en desarrollo o cuando esté seguro de que ningún usuario se verá afectado por estos cambios.",
+	"prompt-lab.generate.confirmation.title": "Antes de continuar...",
+	"prompt-lab.generate.loading.description": "Estamos generando tus resultados. Por favor no abandones la página.",
+	"prompt-lab.generate.loading.title": "Sólo un momento…",
+	"prompt-lab.page-description": "Pruebe los LLM y las indicaciones, vea cómo funcionan juntos, elija qué configuraciones desea aplicar a su Knowledge Box.",
+	"prompt-lab.page-title": "Prompt lab",
+	"prompt-lab.results.download-csv": "Descargar CSV",
+	"prompt-lab.results.prompt": "Prompt: ",
+	"prompt-lab.results.question": "Pregunta: {{query}}",
+	"prompt-lab.results.title": "Resultados",
 	"quickstart.become_master": "¡Conviértete en un experto!",
 	"quickstart.complete_steps": "¡Complete los pasos a continuación para aprovechar al máximo las funciones de Nuclia!",
 	"quickstart.completed_tasks": "Tareas completadas",
@@ -819,6 +839,7 @@
 	"sidenav.list": "Listado de recursos",
 	"sidenav.manage-kbs": "Knowledge Boxes",
 	"sidenav.nua-keys": "Claves NUA",
+	"sidenav.prompt-lab": "Prompt lab",
 	"sidenav.settings": "Preferencias",
 	"sidenav.subscription": "Suscripción",
 	"sidenav.sync": "Sincronizar",
