--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -704,7 +704,7 @@
 	"resource.confirm-reprocess.plural-description": "Nous avons besoin d'un certain temps pour traiter les données. Une fois retraitées, vous pourrez les voir sur la page de la liste des ressources et les éditer, les classer ou les annoter.",
 	"resource.confirm-reprocess.plural-title": "Êtes-vous sûr de vouloir retraiter les ressources ?",
 	"resource.confirm-reprocess.title": "Êtes-vous sûr de vouloir retraiter la ressource ?",
-	"resource.confirm-summarize.description": "Le résumé produit sera stocké dans la ressource. Cette opération peut prendre du temps, elle s'exécutera en arrière-plan, vous pouvez continuer à utiliser l'application, mais ne fermez pas cette page tant que l'opération n'est pas terminée.",
+	"resource.confirm-summarize.description": "Le résumé résultant sera stocké dans la ressource. Cette opération peut prendre jusqu'à une minute, veuillez ne pas quitter le tableau de bord tant qu'elle n'est pas terminée.",
 	"resource.confirm-summarize.title": "Résumer cette ressource",
 	"resource.description.title": "La description",
 	"resource.empty": "Il n'y a aucun contenu dans votre Knowledge Box pour le moment.",
