Move models from advanced KB settings to new AI models page

--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -460,6 +460,35 @@
 	"getting-started.upload.link-textarea.help": "Une URL par ligne",
 	"getting-started.upload.link-textarea.label": "Tapez ou collez les URLs des pages Web",
 	"getting-started.upload.title": "1. Télécharger des données",
+	"kb.ai-models.anonymization_toggle.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
+	"kb.ai-models.anonymization_toggle.label": "Anonymisation",
+	"kb.ai-models.confirm-anonymization.confirm-button": "Anonymiser",
+	"kb.ai-models.confirm-anonymization.description": "Une fois les ressources anonymisées, cela ne peut plus être annulé. <br>Remarque : les nouveaux paramètres d'anonymisation n'affecteront pas les ressources existantes",
+	"kb.ai-models.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
+	"kb.ai-models.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
+	"kb.ai-models.generative_model.label": "Génération de réponses",
+	"kb.ai-models.generative_model.system_prompt_label": "Comportement",
+	"kb.ai-models.page-description": "Configurez les modèles disponibles pour vos données",
+	"kb.ai-models.page-title": "Modèles d'IA",
+	"kb.ai-models.pdf_annotation_toggle.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
+	"kb.ai-models.pdf_annotation_toggle.label": "Annoter par sélection",
+	"kb.ai-models.semantic.help": "Le modèle sémantique dépend des langues que vous avez sélectionnées lors de la création de cette Knowledge Box",
+	"kb.ai-models.semantic.label": "Modèle sémantique",
+	"kb.ai-models.summary.help": "Spécifie le type de résumé à la demande à générer",
+	"kb.ai-models.summary.label": "Type de résumé à la demande",
+	"kb.ai-models.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
+	"kb.ai-models.summary_model.label": "Résumé à la demande",
+	"kb.ai-models.summary_prompt.examples": "Exemples",
+	"kb.ai-models.summary_prompt.prompt": "Invite de résumé personnalisée",
+	"kb.ai-models.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
+	"kb.ai-models.toasts.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
+	"kb.ai-models.toasts.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
+	"kb.ai-models.use_own_key.label": "Utilisez votre propre clé pour le modèle sélectionné",
+	"kb.ai-models.user_prompts.examples": "Exemples",
+	"kb.ai-models.user_prompts.prompt": "Prompt",
+	"kb.ai-models.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
+	"kb.ai-models.user_prompts.system": "Comportement personnalisé",
+	"kb.ai-models.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"kb.create.error": "Une erreur s'est produite lors de la création de la Knowledge Box. Veuillez réessayer.",
 	"kb.create.failure": "Quelque chose ne va pas en ce moment. Contactez votre administrateur.",
 	"kb.create.in_progress": "Création de la Knowledge Box en cours…",
@@ -467,14 +496,6 @@
 	"kb.create.title": "Créer une Knowledge Box",
 	"kb.invalid-slug": "Knowledge Box slug invalide",
 	"kb.name": "Nom de la Knowledge Box",
-	"kb.settings.anonymization_toggle.help": "Appliquer l'anonymisation conforme au Règlement général sur la protection des données (RGPD) à toutes les nouvelles ressources de la Knowledge Box",
-	"kb.settings.anonymization_toggle.label": "Anonymisation",
-	"kb.settings.confirm-anonymization.confirm-button": "Anonymiser",
-	"kb.settings.confirm-anonymization.description": "Une fois les ressources anonymisées, cela ne peut plus être annulé. <br>Remarque : les nouveaux paramètres d'anonymisation n'affecteront pas les ressources existantes",
-	"kb.settings.confirm-anonymization.title": "Attention : les ressources futures seront affectées",
-	"kb.settings.generative_model.help": "Indiquez le modèle utilisé pour générer des réponses aux questions des utilisateurs.",
-	"kb.settings.generative_model.label": "Génération de réponses",
-	"kb.settings.generative_model.system_prompt_label": "Comportement",
 	"kb.settings.learning-options.anthropic": "Anthropic Claude",
 	"kb.settings.learning-options.chatgpt": "OpenAI ChatGPT-3.5",
 	"kb.settings.learning-options.chatgpt-azure": "OpenAI + Azure ChatGPT-4",
@@ -491,30 +512,11 @@
 	"kb.settings.learning-options.palm": "Google PaLM 2 (beta)",
 	"kb.settings.learning-options.summary-extended": "Résumé détaillé mettant en avant les sujets marquants et les termes importants",
 	"kb.settings.learning-options.summary-simple": "Résumé standard de quelques lignes",
-	"kb.settings.models-section.advanced": "Avancé",
-	"kb.settings.models-section.title": "Modèles et prompts",
-	"kb.settings.pdf_annotation_toggle.help": "Permet de sélectionner visuellement certaines parties de la mise en page du document et de les annoter.",
-	"kb.settings.pdf_annotation_toggle.label": "Annoter par sélection",
-	"kb.settings.semantic.help": "Le modèle sémantique dépend des langues que vous avez sélectionnées lors de la création de cette Knowledge Box",
-	"kb.settings.semantic.label": "Modèle sémantique",
 	"kb.settings.status.label": "Knowledge Box statut: <strong>{{state}}</strong>",
 	"kb.settings.status.private": "privée",
 	"kb.settings.status.published": "publique",
-	"kb.settings.summary.help": "Spécifie le type de résumé à la demande à générer",
-	"kb.settings.summary.label": "Type de résumé à la demande",
-	"kb.settings.summary_model.help": "Indique le modèle utilisé par la fonctionnalité de résumé à la demande",
-	"kb.settings.summary_model.label": "Résumé à la demande",
-	"kb.settings.summary_prompt.examples": "Exemples",
-	"kb.settings.summary_prompt.prompt": "Invite de résumé personnalisée",
-	"kb.settings.summary_prompt.prompt_help": "Définit une invite personnalisée qui sera utilisée à la place de l'invite par défaut lors de la génération d'un résumé.",
 	"kb.settings.toasts.failure": "Une erreur s'est produite lors de l'enregistrement des paramètres.",
 	"kb.settings.toasts.success": "Les nouveaux paramètres ont été enregistrés avec succès.",
-	"kb.settings.use_own_key.label": "Utilisez votre propre clé pour le modèle sélectionné",
-	"kb.settings.user_prompts.examples": "Exemples",
-	"kb.settings.user_prompts.prompt": "Prompt",
-	"kb.settings.user_prompts.prompt_help": "Définit la manière dont nous voulons que le système agisse lorsque nous posons une question. Il est possible de définir des règles plus spécifiques, qui peuvent même remplacer le comportement défini. Par exemple, nous pourrions avoir une invite qui oblige le système à ne donner que des résultats sous forme de listes, ou même à demander de répondre dans une langue donnée.",
-	"kb.settings.user_prompts.system": "Comportement personnalisé",
-	"kb.settings.user_prompts.system_help": "Définit les traits de personnalité généraux de l'assistant, ou la manière dont il doit se comporter lorsqu'il répond à des questions ou au cours d'une conversation. Par exemple, nous pourrions définir que le système répondra en tant que professionnel de la santé.",
 	"kb.users.already-exists": "Un utilisateur avec l'adresse e-mail <strong>{{email}}</strong> existe déjà dans cette Knowledge Box",
 	"kb.users.pending-invitation": "En attente d'acceptation: expire le {{date}}",
 	"label-set.add": "Ajouter un jeu d'étiquettes",
@@ -592,6 +594,26 @@
 	"modal.upload.queue_length": "Longueur de la file d'attente",
 	"modal.upload.title": "Téléchargez vos fichiers",
 	"modal.upload_folder": "Ajouter un dossier",
+	"navbar.account-home": "Tableau de bord",
+	"navbar.account-settings": "Compte",
+	"navbar.activity": "Journal d'activité",
+	"navbar.advanced": "Avancé",
+	"navbar.ai-models": "Modèles d'IA",
+	"navbar.api_keys": "Clés API",
+	"navbar.classification": "Familles d'étiquettes",
+	"navbar.home": "Accueil",
+	"navbar.list": "Liste des ressources",
+	"navbar.manage-kbs": "Knowledge Boxes",
+	"navbar.nua-keys": "Clés NUA",
+	"navbar.prompt-lab": "Prompt lab",
+	"navbar.settings": "Réglages",
+	"navbar.subscription": "Abonnement",
+	"navbar.sync": "Synchroniser",
+	"navbar.synonyms": "Synonymes",
+	"navbar.trainings": "Entraînements",
+	"navbar.upload-data": "Télécharger",
+	"navbar.users": "Utilisateurs",
+	"navbar.widgets": "Widgets",
 	"need-help-book-demo": "Besoin d'aide? Réservez une démo !",
 	"ner-add-entity-dialog.title": "Ajouter NER",
 	"ner-family-dialog.family-color": "Couleur de la famille NER",
@@ -831,25 +853,6 @@
 	"search.type_of_document": "Type de document",
 	"search.type_of_results": "Type de résultats",
 	"setup.set_password": "Définir votre mot de passe",
-	"sidenav.account-home": "Tableau de bord",
-	"sidenav.account-settings": "Compte",
-	"sidenav.activity": "Journal d'activité",
-	"sidenav.advanced": "Avancé",
-	"sidenav.api_keys": "Clés API",
-	"sidenav.classification": "Familles d'étiquettes",
-	"sidenav.home": "Accueil",
-	"sidenav.list": "Liste des ressources",
-	"sidenav.manage-kbs": "Knowledge Boxes",
-	"sidenav.nua-keys": "Clés NUA",
-	"sidenav.prompt-lab": "Prompt lab",
-	"sidenav.settings": "Réglages",
-	"sidenav.subscription": "Abonnement",
-	"sidenav.sync": "Synchroniser",
-	"sidenav.synonyms": "Synonymes",
-	"sidenav.trainings": "Entraînements",
-	"sidenav.upload-data": "Télécharger",
-	"sidenav.users": "Utilisateurs",
-	"sidenav.widgets": "Widgets",
 	"standalone.menu.button-label": "Menu",
 	"standalone.menu.introspect": "Données d'introspection",
 	"standalone.menu.kb-list": "Knowledge Boxes",
