--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -464,6 +464,7 @@
 	"kb.ai-models.confirm-anonymization.confirm-button": "Anònim",
 	"kb.ai-models.confirm-anonymization.description": "Un cop anonimitzats els recursos, no es pot desfer. <br>Nota: la nova configuració d'anonimització no afectarà els recursos existents",
 	"kb.ai-models.confirm-anonymization.title": "Avís: els recursos futurs es veuran afectats",
+	"kb.ai-models.error.kb-not-supported": "El vostre Knowledge Box no admet models d'IA. Creeu un nou Knowledge Box per utilitzar aquesta funció.",
 	"kb.ai-models.generative_model.help": "Indiqueu el model utilitzat per generar respostes a les preguntes dels usuaris.",
 	"kb.ai-models.generative_model.label": "Generació de respostes",
 	"kb.ai-models.generative_model.system_prompt_label": "Comportament",
