--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -465,6 +465,7 @@
 	"kb.ai-models.confirm-anonymization.confirm-button": "Anonymize",
 	"kb.ai-models.confirm-anonymization.description": "Once the resources are anonymized, it cannot be undone. <br>\nNote: new anonymization settings will not affect existing resources",
 	"kb.ai-models.confirm-anonymization.title": "Warning: future resources will be affected",
+	"kb.ai-models.error.kb-not-supported": "Your Knowledge Box doesn’t support AI models. Please create a new Knowledge Box to use this feature. ",
 	"kb.ai-models.generative_model.help": "Indicate the model used to generate answers to user questions.",
 	"kb.ai-models.generative_model.label": "Answer generation",
 	"kb.ai-models.generative_model.system_prompt_label": "Behavior",
