Modify sync server settings form

--- a/libs/sync/src/assets/i18n/en.json
+++ b/libs/sync/src/assets/i18n/en.json
@@ -44,11 +44,12 @@
 	"upload.select.search": "Search",
 	"upload.server.external": "External server",
 	"upload.server.external-button": "Use external server",
+	"upload.server.help": "Enter {{url}} if your sync agent is running locally",
 	"upload.server.local": "Local server",
 	"upload.server.local-button": "Use local server",
 	"upload.server.server_down": "Sync server is down",
 	"upload.server.server_up": "Sync server is up",
-	"upload.server.title": "Connect to sync server",
+	"upload.server.title": "Setup sync server",
 	"upload.server.url": "Server URL",
 	"upload.source.confirm-delete-description": "If you delete this connector, all active uploads from this resource will be canceled. You cannot undo this action.",
 	"upload.source.confirm-delete-title": "Are you sure  you want to delete {{name}} connector?",
