--- a/libs/sync/src/assets/i18n/es.json
+++ b/libs/sync/src/assets/i18n/es.json
@@ -44,11 +44,12 @@
 	"upload.select.search": "Busca",
 	"upload.server.external": "Servidor externo",
 	"upload.server.external-button": "Usar servidor externo",
+	"upload.server.help": "Introduce {{url}} si tu agente de sincronización se está ejecutando en local",
 	"upload.server.local": "Servidor local",
 	"upload.server.local-button": "Usar servidor local",
 	"upload.server.server_down": "El servidor de sincronización está inactivo",
 	"upload.server.server_up": "El servidor de sincronización está activo",
-	"upload.server.title": "Conectarse al servidor de sincronización",
+	"upload.server.title": "Configurar servidor de sincronización",
 	"upload.server.url": "URL del servidor",
 	"upload.source.confirm-delete-description": "Si eliminas este conector, se cancelarán todas las subidas activas de este conector. No se puede deshacer esta acción.",
 	"upload.source.confirm-delete-title": "¿Estas seguro que quieres eliminar el conector {{name}}?",
