--- a/libs/sync/src/assets/i18n/fr.json
+++ b/libs/sync/src/assets/i18n/fr.json
@@ -44,11 +44,12 @@
 	"upload.select.search": "Rechercher",
 	"upload.server.external": "Serveur externe",
 	"upload.server.external-button": "Utiliser un serveur externe",
+	"upload.server.help": "Saisissez {{url}} si votre agent de synchronisation s'exécute localement",
 	"upload.server.local": "Serveur local",
 	"upload.server.local-button": "Utiliser le serveur local",
 	"upload.server.server_down": "Le serveur de synchronisation est en panne",
 	"upload.server.server_up": "Le serveur de synchronisation est opérationnel",
-	"upload.server.title": "Se connecter au serveur de synchronisation",
+	"upload.server.title": "Configurer le serveur de synchronisation",
 	"upload.server.url": "URL du serveur",
 	"upload.source.confirm-delete-description": "Si vous supprimez ce connecteur, tous les téléchargements actifs depuis ce connecteur seront annulés. Vous ne pouvez pas annuler cette action.",
 	"upload.source.confirm-delete-title": "Etes-vous sûr que vous voulez supprimer\nConnecteur {{name}} ?",
