--- a/libs/sync/src/assets/i18n/ca.json
+++ b/libs/sync/src/assets/i18n/ca.json
@@ -44,11 +44,12 @@
 	"upload.select.search": "Cerca",
 	"upload.server.external": "Servidor extern",
 	"upload.server.external-button": "Utilitzeu un servidor extern",
+	"upload.server.help": "Introduïu {{url}} si el vostre agent de sincronització s'executa en local",
 	"upload.server.local": "Servidor local",
 	"upload.server.local-button": "Utilitzeu el servidor local",
 	"upload.server.server_down": "El servidor de sincronització està inactiu",
 	"upload.server.server_up": "El servidor de sincronització està activat",
-	"upload.server.title": "Connecteu-vos al servidor de sincronització",
+	"upload.server.title": "Configurar el servidor de sincronització",
 	"upload.server.url": "URL del servidor",
 	"upload.source.confirm-delete-description": "Si elimines aquest connector, es cancel·laran totes les pujades actives d'aquest connector. No podeu desfer aquesta acció.",
 	"upload.source.confirm-delete-title": "Estas segur que voleu eliminar el connector {{name}}?",
